<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.openmrs.module</groupId>
	<artifactId>validation</artifactId>
	<version>2.1.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Validation</name>
	<description>A module which allows to validate data and metadata in your system.</description>

	<url>https://wiki.openmrs.org/x/CwDeAQ</url>

	<properties>
		<openMRSVersion>2.3.3</openMRSVersion>
		<openMRSMinorVersion>2.3</openMRSMinorVersion>
		<legacyuiVersion>1.7.0</legacyuiVersion>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<modules>
		<module>api</module>
		<module>omod</module>
	</modules>

	<scm>
		<connection>scm:git:git@github.com:openmrs/openmrs-module-validation.git</connection>
		<developerConnection>scm:git:git@github.com:openmrs/openmrs-module-validation.git</developerConnection>
		<url>https://github.com/openmrs/openmrs-module-validation/</url>
		<tag>HEAD</tag>
	</scm>

	<distributionManagement>
		<repository>
			<id>openmrs-repo-modules</id>
            <name>Modules</name>
            <url>https://openmrs.jfrog.io/artifactory/modules/</url>
		</repository>
		<snapshotRepository>
			<id>openmrs-repo-snapshots</id>
			<name>OpenMRS Snapshots</name>
            <url>https://openmrs.jfrog.io/artifactory/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<dependencyManagement>
		<dependencies>

			<dependency>
				<groupId>org.openmrs.api</groupId>
				<artifactId>openmrs-api</artifactId>
				<version>${openMRSVersion}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.api</groupId>
				<artifactId>openmrs-api</artifactId>
				<version>${openMRSVersion}</version>
				<classifier>tests</classifier>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.web</groupId>
				<artifactId>openmrs-web</artifactId>
				<version>${openMRSVersion}</version>
				<type>jar</type>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.openmrs.api</groupId>
				<artifactId>openmrs-api</artifactId>
				<version>${openMRSVersion}</version>
				<type>test-jar</type>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.openmrs.web</groupId>
				<artifactId>openmrs-web</artifactId>
				<version>${openMRSVersion}</version>
				<type>test-jar</type>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.openmrs.test</groupId>
				<artifactId>openmrs-test</artifactId>
				<version>${openMRSVersion}</version>
				<type>pom</type>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>legacyui-api</artifactId>
				<version>${legacyuiVersion}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>legacyui-omod</artifactId>
				<version>${legacyuiVersion}</version>
				<scope>provided</scope>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
                        <target>1.8</target>
                        <source>1.8</source>
                        <encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.openmrs.maven.plugins</groupId>
					<artifactId>maven-openmrs-plugin</artifactId>
					<version>1.0.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.4</version>
				</plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.5</version>
					<configuration>
						<autoVersionSubmodules>true</autoVersionSubmodules>
						<tagNameFormat>@{project.version}</tagNameFormat>
					</configuration>
                </plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<executions>
						<execution>
							<goals>
								<goal>test-jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.13</version>
					<configuration>
						<includes>
							<include>**/*Test.java</include>
						</includes>
						<runOrder>alphabetical</runOrder> <!-- TODO: hack because we want the ViewRecordController Test to run last since it dirties context (?); figure out the right way and remove this  -->
						<argLine>-Duser.language=en -Duser.region=US -Xmx512m -XX:MaxPermSize=512m</argLine>
					</configuration>
				</plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>2.9.1</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
            <url>https://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
            <url>https://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
        </pluginRepository>
        <pluginRepository>
            <id>openmrs-repo-snapshots</id>
            <name>OpenMRS Snapshots</name>
            <url>https://mavenrepo.openmrs.org/nexus/content/repositories/snapshots</url>
		</pluginRepository>
	</pluginRepositories>

</project>
